# cpx

./: CMakeLists.txt  CMakePresets.json  README.md
examples/0-basic/: main.cpp
examples/1-struct/: main.cpp
examples/2-enum/: main.cpp
examples/3-cli/: main.cpp
examples/4-sql/: main.cpp
examples/5-protobuf/: main.cpp
include/cpx/: defer.h  extend.h  fmt.h  iter.h  optional.h  overload.h  result.h  tag.h  tag_info.h  time.h  tuple.h
include/cpx/cli/: cli.h  cli11.h  jarro_cxxopts.h
include/cpx/genai/: anthropic.h  anthropic_messages.h  gemini.h  gemini_generate.h  ollama.h  ollama_generate.h  openai.h  openai_chat_completions.h
include/cpx/inference/: config.h  cross_encoder.h  onnx.h  openvino.h  runtime.h  sentence_transformers.h  tensor.h
include/cpx/json/: json.h  nlohmann_json.h  yy_json.h
include/cpx/multithreading/: channel.h  queue.h  semaphore.h
include/cpx/proto/: protobuf.h
include/cpx/serde/: deserialize.h  error.h  serialize.h
include/cpx/sql/: sql.h  sqlite3.h
include/cpx/toml/: marzer_toml.h  toml.h  toruniina_toml.h
tests/: json.cpp  sql.cpp  sqlite3.cpp  toml.cpp  utils.cpp
tests/bench/: json.cpp  person.proto  proto.cpp
